--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,90 +1,42 @@
-version: 2.1
-orbs:
-  aws-ecr: circleci/aws-ecr@6.7.1
-  slack: circleci/slack@3.4.2
-workflows:
-  compile_and_test:
-    jobs:
-      - build
-      - test
-  build_and_deploy:
-    jobs:
-      - pack
-      - aws-ecr/build-and-push-image:
-          requires:
-            - pack
-          account-url: AWS_ECR_ACCOUNT_URL
-          aws-access-key-id: ACCESS_KEY_ID
-          aws-secret-access-key: SECRET_ACCESS_KEY
-#          context: myContext
-          create-repo: false
-          attach-workspace: true
-          dockerfile: Dockerfile
-          path: ~
-          region: AWS_ECR_REGION
-          repo: pcse
-          tag: 'latest'
+# Scala CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/sample-config/ for more details
+#
+version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:11-jdk
-    working_directory: ~/
-    environment:
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-    steps:
-      - checkout
-      - run:
-          name: Compile source
-          command: sbt compile
-  test:
-    docker:
-      - image: circleci/openjdk:11-jdk
-    working_directory: ~/
-    environment:
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-    steps:
-      - checkout
-      - run:
-          name: Run tests
-          command: sbt test
-  pack:
-    docker:
-      - image: circleci/openjdk:11-jdk
-    working_directory: ~/
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
     environment:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
-      SBT_VERSION: 1.3.7
       TERM: dumb
+
     steps:
       - checkout
-      - run:
-          name: Pack executable
-          command: sbt pack
-      # Persist the specified paths into the workspace for use in downstream job.
-      - persist_to_workspace:
-          # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is
-          # taken to be the root directory of the workspace.
-          root: ~/
-          # Must be relative path from root
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "build.sbt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: cat /dev/null | sbt test:compile
+
+      - save_cache:
           paths:
-            - .
+            - ~/.m2
+          key: v1-dependencies--{{ checksum "build.sbt" }}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Message Charles:spiral_calendar_pad: In a meeting • Outlook Calendar App
-
+      # run tests!
+      - run: cat /dev/null | sbt test:test
