--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:11-jdk
-    working_directory: ~/
+    # working_directory: ~/
     environment:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
@@ -25,7 +25,7 @@ jobs:
   test:
     docker:
       - image: circleci/openjdk:11-jdk
-    working_directory: ~/
+    # working_directory: ~/
     environment:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
