--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - checkout
       - run:
           name: Compile source
-          command: sbt compile
+          command: sbt test
   test:
     docker:
       - image: circleci/openjdk:11-jdk
